Updat, fix #1